--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
               <li><a href="https://github.com/mozilla/browserid">browserid</a></li>
               <li><span class="label label-important">Private</span> <a href="https://github.com/mozilla/browserid_private">browserid_private</a></li>
               <li><a href="https://github.com/mozilla/browserid-bigtent">browserid-bigtent</a></li>
+              <li><a href="https://github.com/mozilla/browserid-sideshow">browserid-sideshow</a></li>
               <li><a href="https://github.com/mozilla/kpiggybank">kpiggybank</a></li>
             </ul>
             <li>Sites</li>
